# WebCMD

./: .gitignore  .gitmodules  AutoHideCMD.sln  CMakeLists.txt  README.md  release_changelog.txt
.github/workflows/: build.yml
AutoHideCMD/: AutoHideCMD.vcxproj  AutoHideCMD.vcxproj.filters  CMakeLists.txt  main.cpp  refs.cpp  refs.h
AutoHideCMD/include/: page_sources.h  table_line.h
AutoHideCMD/page_ref/: index.html
AutoHideCMD/src/: history.cpp  main.cpp  main_win32_wrapper.cpp  quick_tools.cpp
WebCMD/: CMakeLists.txt
WebCMD/include/: argument_handler.h  history.h  page_sources.h  table_line.h
WebCMD/page_ref/: index.html
WebCMD/src/: argument_handler.cpp  history.cpp  main.cpp  table_line.cpp
